--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -39,3 +39,12 @@ body{
     background-color: #2F6EB9;
     color: #ffffff;
 }
+
+.links_footer a:link{
+    color: #ffffff;
+}
+
+.redes_sociales img{
+    width: 30px;
+    height: 30px;
+}
