Menu destinos agregado al lado derecho.

--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -58,3 +58,9 @@ body{
     font-family: Tahoma;
     font-size: 12px;
 }
+
+.titulo_menu_destinos{
+    font-family: Tahoma;
+    font-size: 13px;
+    font-weight: bold;
+}
