Aplicando commit arreglar repositorio.

--- a/css/stylepage.css
+++ b/css/stylepage.css
@@ -79,20 +79,22 @@ body{
 
 @media (min-width: 768px) and (max-width: 979px){
     #map{
-        max-width: 450px;
+        max-width: 550px;
+        max-height: 350px
         
     }
 }
 
 @media (max-width: 767px) {
     #map{
-        max-width: 350px;
+        max-width: 450px;
+        max-height: 350px;
     }
 }
 
 @media (max-width: 480px) {
     #map{
-        max-width: 200px;
-        max-height: 200px;
+        width: 200px;
+        height: 200px;
     }
 }
